// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiRange allows value prop to accept a number 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      class="euiRangeSlider"
      max="100"
      min="1"
      step="1"
      type="range"
      value="8"
    />
    <div
      class="euiRangeTooltip"
    >
      <output
        class="euiRangeTooltip__value euiRangeTooltip__value--right"
        style="left:7.07070707070707%"
      >
        8
      </output>
    </div>
  </div>
</div>
`;

exports[`EuiRange is rendered 1`] = `
<div
  class="euiRangeWrapper euiRange testClass1 testClass2"
>
  <div
    class="euiRangeTrack"
  >
    <input
      aria-label="aria-label"
      class="euiRangeSlider"
      data-test-subj="test subject string"
      id="id"
      max="10"
      min="1"
      name="name"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`EuiRange props compressed should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      class="euiRangeSlider"
      max="100"
      min="1"
      step="1"
      type="range"
    />
  </div>
</div>
`;

exports[`EuiRange props extra input should render 1`] = `
<div
  class="euiRangeWrapper euiRange testClass1 testClass2"
>
  <div
    class="euiRangeTrack"
  >
    <input
      aria-label="aria-label"
      class="euiRangeSlider"
      data-test-subj="test subject string"
      id="id"
      max="10"
      min="1"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
      value="8"
    />
  </div>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="euiFieldNumber euiRangeInput euiRangeInput--max"
        data-test-subj="test subject string"
        max="10"
        min="1"
        name="name"
        step="1"
        style="width:3.6em"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiRange props fullWidth should render 1`] = `
<div
  class="euiRangeWrapper euiRangeWrapper--fullWidth euiRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      class="euiRangeSlider"
      max="100"
      min="1"
      step="1"
      type="range"
    />
  </div>
</div>
`;

exports[`EuiRange props labels should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <label
    class="euiRangeLabel euiRangeLabel--min"
  >
    1
  </label>
  <div
    class="euiRangeTrack"
  >
    <input
      class="euiRangeSlider"
      max="100"
      min="1"
      step="1"
      type="range"
    />
  </div>
  <label
    class="euiRangeLabel euiRangeLabel--max"
  >
    100
  </label>
</div>
`;

exports[`EuiRange props levels should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      class="euiRangeSlider"
      max="100"
      min="1"
      step="1"
      type="range"
    />
    <div
      class="euiRangeLevels"
    >
      <span
        class="euiRangeLevel euiRangeLevel--danger"
        style="width:19.19191919191919%"
      />
      <span
        class="euiRangeLevel euiRangeLevel--success"
        style="width:80.8080808080808%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiRange props range should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      class="euiRangeSlider euiRangeSlider--hasRange"
      max="100"
      min="1"
      step="1"
      type="range"
      value="8"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:0%;width:7.07070707070707%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiRange props ticks should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      class="euiRangeSlider euiRangeSlider--hasTicks"
      max="100"
      min="1"
      step="1"
      type="range"
    />
    <div
      class="euiRangeTicks"
      style="margin:0 -8.403361344537815%;left:0;right:0"
    >
      <button
        class="euiRangeTick"
        style="width:16.80672268907563%"
        tabindex="-1"
        title="1"
        type="button"
        value="1"
      >
        1
      </button>
      <button
        class="euiRangeTick"
        style="width:16.80672268907563%"
        tabindex="-1"
        title="21"
        type="button"
        value="21"
      >
        21
      </button>
      <button
        class="euiRangeTick"
        style="width:16.80672268907563%"
        tabindex="-1"
        title="41"
        type="button"
        value="41"
      >
        41
      </button>
      <button
        class="euiRangeTick"
        style="width:16.80672268907563%"
        tabindex="-1"
        title="61"
        type="button"
        value="61"
      >
        61
      </button>
      <button
        class="euiRangeTick"
        style="width:16.80672268907563%"
        tabindex="-1"
        title="81"
        type="button"
        value="81"
      >
        81
      </button>
    </div>
  </div>
</div>
`;

exports[`EuiRange props value should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      class="euiRangeSlider"
      max="100"
      min="1"
      step="1"
      type="range"
    />
    <div
      class="euiRangeTooltip"
    >
      <output
        class="euiRangeTooltip__value euiRangeTooltip__value--left"
        style="left:100%"
      />
    </div>
  </div>
</div>
`;
